kubernetes/apps/networking/jetkvm/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvm-macmini
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kvm-macmini
subsets:
  - addresses:
      - ip: 192.168.50.79
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kvm-proxmox
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kvm-proxmox
subsets:
  - addresses:
      - ip: 192.168.50.167
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kvm-nuc
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kvm-nuc
subsets:
  - addresses:
      - ip: 192.168.2.183
    ports:
      - port: 80
